--- a/project-1/index.html
+++ b/project-1/index.html
@@ -5,8 +5,9 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Tajawal&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
-        <meta name="description" content="Mohamed Anwar Sadat Tribute Page.">
         <meta name="author" content="Ahmed Ismail">
+        <meta name="description" content="Mohamed Anwar Sadat Tribute Page.">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     </head>
     <body>
         <div id="first-div">
